src/components/Intro/intro.scss
.intro-wrapper {
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    padding: 30px;
    .profile-title {
        margin-bottom: 2rem;
    }
}
.intro__text {
    display: flex;
    &--wrapper {
        max-width: 670px !important;

    }
    &--btn {
        margin-left: auto !important;
        width: 30%;
        height: auto;
        align-self: flex-end;
    }
}

.intro--name {
    margin-bottom: 2rem !important;
} 

@media only screen and (min-width: 681px) and (max-width: 1080px) {
    .intro__text {
        gap: 15px;
        &--btn {
            width: 90%;
        }
    }
}

@media only screen and (max-width: 880px){
.intro--name {
    font-size: 2rem !important;
}
.intro__text {
    flex-direction: column;
    gap: 15px;
    &--btn {
        width: 100%;
    }
}
.profession {
    font-size: 1.4rem !important;
}
}

